# Black-White

./: .gitignore  BlackWhite.props  BlackWhite.sln  BlackWhite.vcxproj  BlackWhite.vcxproj.filters  CMakeLists.txt  ClassDiagram2.cd  LICENSE  README.md  archive.hpp  ataxx.board.hpp  bwlocale.hpp  components.cpp  components.h  components.hpp  config.hpp  config.json  core.hpp  env.hpp  game.hpp  gamer.hpp  globals.cpp  globals.hpp  initialize.hpp  ipv4.cpp  ipv4.hpp  locale.7z  log.txt  main.cpp  message.hpp  move.hpp  online.basic_gamer.hpp  online.components.hpp  online.gamer.hpp  online.gamer_info.hpp  online.hpp  online.room.hpp  online.simple.hpp  othello.ai.hpp  othello.ai.practise.cpp  (+28 more)
include/: basic_Game.hpp  basic_gamer.hpp  config.hpp  core.hpp  env.hpp  exceptions.hpp  game.hpp  gamer.hpp  games.hpp  globals.hpp  initialize.hpp  macros.hpp  move.hpp  othello.hpp  safe_vector.hpp  stdafx.h  tictactoe.hpp  timer.hpp  tools.hpp  tree.hpp
include/ataxx/: board.hpp
include/gamer/: basic_gtp_gamer.hpp  basic_http_gamer.hpp  basic_lua_gamer.hpp  basic_python_gamer.hpp  lua.hpp
include/gobang/: board.hpp  components.hpp  game.hpp  gamer.hpp  move.hpp  moves.hpp
include/gobang/gamer/: human.hpp  online.hpp
include/move_server/: move_server.hpp
include/net/: message.hpp
include/online/: basic_gamer.hpp  basic_online_gamer.hpp  basic_user.hpp  components.hpp  gamer.hpp  gamer_info.hpp  room.hpp  signals.hpp  simple.hpp  user.hpp  user_info.hpp
include/othello/: ai.hpp  board.hpp  components.hpp  game.hpp  gamer.hpp  gamer_prepare.hpp  move.hpp  moves.hpp  online.hpp
include/othello/ai/: alphabeta.hpp  common.hpp  eval_methods.hpp  mcts.hpp  minmax.hpp  practise.hpp
include/othello/gamer/: computer.hpp  http_gamer.hpp  human.hpp  lua_gamer.hpp  online.hpp  python_gamer.hpp  remote.hpp  remote_tcp.hpp
include/othello/online/: gamer.hpp
include/othello/tui/: components.hpp  gamer_prepare.hpp
include/tictactoe/: board.hpp  components.hpp  game.hpp  gamer.hpp  move.hpp  moves.hpp
include/tictactoe/gamer/: computer.hpp  human.hpp  lua_gamer.hpp  online.hpp
include/tui/: bwlocale.hpp  components.hpp  ftxui_screen.hpp  move_server_page.hpp  screen.hpp  scroller.hpp  settings_page.hpp  text_editor.hpp  ui.hpp
include/tui/game/: gamer_prepare.hpp
locale/zh_CN/LC_MESSAGES/: zh_CN.mo  zh_CN.po
locale/zh_CN_/LC_MESSAGES/: zh_CN.mo  zh_CN.po
src/: ipv4.cpp  main.cpp
src/tui/: grid-container.cpp  ipv4.cpp  scroller.cpp  text_editor.cpp
